test/vm/fails/invalid_read.js
read(bech32(), "field");